[gd_scene load_steps=2 format=3 uid="uid://b5k33d222kp2n"]

[ext_resource type="Script" path="res://multiplayer_template/menu/debug_menu/debug_sub_menus/server_debug_sub_menu.gd" id="1_cpykq"]

[node name="ServerDebugSubMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cpykq")
menu_name = "server"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Launch" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Launch Server"

[node name="LaunchLAN" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Launch Server with LAN"

[node name="LaunchLobby" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Launch Lobby"

[node name="PrintLobbyData" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Print Lobby Data"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/Launch" to="." method="_on_launch_pressed"]
[connection signal="pressed" from="VBoxContainer/LaunchLAN" to="." method="_on_launch_lan_pressed"]
[connection signal="pressed" from="VBoxContainer/LaunchLobby" to="." method="_on_launch_lobby_pressed"]
[connection signal="pressed" from="VBoxContainer/PrintLobbyData" to="." method="_on_print_lobby_data_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
